<resources>
    <string name="app_name">Calculator</string>
    <string name="c_button_text" translatable="false">C</string>
    <string name="open_parenthesis_button_text" translatable="false">(</string>
    <string name="close_parenthesis_button_text" translatable="false">)</string>
    <string name="division_button_text" translatable="false">/</string>
    <string name="button_7_text" translatable="false">7</string>
    <string name="button_8_text" translatable="false">8</string>
    <string name="button_9_text" translatable="false">9</string>
    <string name="button_multiplication_text" translatable="false">*</string>
    <string name="button_4_text" translatable="false">4</string>
    <string name="button_5_text" translatable="false">5</string>
    <string name="button_6_text" translatable="false">6</string>
    <string name="button_subtraction_text" translatable="false">-</string>
    <string name="button_1_text" translatable="false">1</string>
    <string name="button_2_text" translatable="false">2</string>
    <string name="button_3_text" translatable="false">3</string>
    <string name="button_addition_text" translatable="false">+</string>
    <string name="button_0_text" translatable="false">0</string>
    <string name="button_comma_text" translatable="false">,</string>
    <string name="button_result_text" translatable="false">=</string>
    <string name="toast_parenthesis_err" >Parenthesis is not open</string>
    <string name="toast_theme_light" >Light theme is chosen</string>
    <string name="toast_theme_dark" >Dark theme is chosen</string>
</resources>