<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainLayoutStile"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/settings_button"
        android:src="@drawable/settings"
        style="@style/SettingsButtonStyle" />

    <HorizontalScrollView style="@style/ResultScrollviewStile">

        <TextView
            android:id="@+id/result_text_view"
            style="@style/ResultViewStile" />
    </HorizontalScrollView>

    <TableLayout style="@style/TableLayoutStileForCalcButtons">

        <TableRow style="@style/TableRowStileForCalcButtons">

            <Button
                android:id="@+id/clear_button"
                style="@style/ButtonStile"
                android:text="@string/c_button_text" />

            <Button
                android:id="@+id/open_parenthesis__button"
                style="@style/ButtonStile"
                android:text="@string/open_parenthesis_button_text" />

            <Button
                android:id="@+id/close_parenthesis_button"
                style="@style/ButtonStile"
                android:text="@string/close_parenthesis_button_text" />

            <Button
                android:id="@+id/division_button"
                style="@style/ButtonStile"
                android:text="@string/division_button_text" />
        </TableRow>

        <TableRow style="@style/TableRowStileForCalcButtons">

            <Button
                android:id="@+id/seven_button"
                style="@style/ButtonStile"
                android:text="@string/button_7_text" />

            <Button
                android:id="@+id/eight_button"
                style="@style/ButtonStile"
                android:text="@string/button_8_text" />

            <Button
                android:id="@+id/nine_button"
                style="@style/ButtonStile"
                android:text="@string/button_9_text" />

            <Button
                android:id="@+id/multiplication_button"
                style="@style/ButtonStile"
                android:text="@string/button_multiplication_text" />
        </TableRow>

        <TableRow style="@style/TableRowStileForCalcButtons">

            <Button
                android:id="@+id/four_button"
                style="@style/ButtonStile"
                android:text="@string/button_4_text" />

            <Button
                android:id="@+id/fife_button"
                style="@style/ButtonStile"
                android:text="@string/button_5_text" />

            <Button
                android:id="@+id/six_button"
                style="@style/ButtonStile"
                android:text="@string/button_6_text" />

            <Button
                android:id="@+id/subtraction_button"
                style="@style/ButtonStile"
                android:text="@string/button_subtraction_text" />
        </TableRow>

        <TableRow style="@style/TableRowStileForCalcButtons">

            <Button
                android:id="@+id/one_button"
                style="@style/ButtonStile"
                android:text="@string/button_1_text" />

            <Button
                android:id="@+id/two_button"
                style="@style/ButtonStile"
                android:text="@string/button_2_text" />

            <Button
                android:id="@+id/three_button"
                style="@style/ButtonStile"
                android:text="@string/button_3_text" />

            <Button
                android:id="@+id/addition_button"
                style="@style/ButtonStile"
                android:text="@string/button_addition_text" />
        </TableRow>

        <TableRow style="@style/TableRowStileForCalcButtons">


            <Button
                android:id="@+id/zero_button"
                style="@style/ButtonStile"
                android:text="@string/button_0_text" />

            <Button
                android:id="@+id/point_button"
                style="@style/ButtonStileWithoutWeight"
                android:text="@string/button_comma_text" />

            <Button
                android:id="@+id/result_button"
                style="@style/ButtonStile"
                android:text="@string/button_result_text" />
        </TableRow>

    </TableLayout>
</LinearLayout>